# text_view-range-v3

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  setenv.sh
cmake/: text_view_range_v3-config.cmake.in
cmake/modules/: FindRange-v3.cmake  Findtext_view_range_v3.cmake
examples/: CMakeLists.txt
examples/tv-dump/: CMakeLists.txt  tv-dump.cpp
examples/tv-enumerate-utf8-code-points/: CMakeLists.txt
examples/tv-find-utf8-multi-code-unit-code-point/: CMakeLists.txt  tv-find-utf8-multi-code-unit-code-point.cpp
include/: CMakeLists.txt
include/text_view_detail/: adl_customization.hpp  advance_to.hpp  archetypes.hpp  basic_view.hpp  caching_iterator.hpp  character.hpp  character_set_info.hpp  concepts.hpp  default_encoding.hpp  integer_sequence.hpp  iterator_preserve.hpp  itext_iterator.hpp  itext_sentinel.hpp  otext_iterator.hpp  riterator.hpp  subobject.hpp  text_view.hpp  to_array.hpp  traits.hpp  void_t.hpp
include/text_view_detail/codecs/: codec_util.hpp  trivial_codec.hpp  utf16_codec.hpp  utf16be_codec.hpp  utf16bom_codec.hpp  utf16le_codec.hpp  utf32_codec.hpp  utf32be_codec.hpp  utf32bom_codec.hpp  utf32le_codec.hpp  utf8_codec.hpp  utf8bom_codec.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  test-caching-iterator.cpp  test-encodings.cpp  test-error-handling.cpp  test-models.cpp  test-subobject.cpp  test-text_view.cpp  test_adapters.hpp
